appId: host.exp.exponent
---
- assertVisible: "Admin View"
- tapOn:
    text: "Admin View"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 3000

- assertVisible: "Manage Events"

- tapOn:
    text: "Add"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 3000

- assertVisible: "New Event"
- waitForAnimationToEnd

- tapOn:
    id: "admin-title-input"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 3000
- setClipboard: "Maestro Test Event"
- pasteText
- hideKeyboard

- tapOn:
    id: "admin-description-input"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 3000
- setClipboard: "Created by Maestro"
- pasteText
- hideKeyboard

- tapOn:
    id: "admin-date-input"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 3000
- setClipboard: "Apr 09, 2026"
- pasteText
- hideKeyboard

- tapOn:
    id: "admin-location-input"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 3000
- setClipboard: "Montreal"
- pasteText
- hideKeyboard

- waitForAnimationToEnd
- tapOn:
    text: "Create Event"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 3000

- extendedWaitUntil:
    visible: "Maestro Test Event"
    timeout: 10000